--- a/DIY.html
+++ b/DIY.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <p>Hello Semua, Saya sedang belajar Git</p>
+        <p>di sini berisi kode untuk main</p>
+        <p>belajar dengan rajin</p>
+        <p>tkj54</p>
     </body>
 </html>
