commit duabelas terbaru

--- a/DIY.html
+++ b/DIY.html
@@ -9,5 +9,6 @@
         <p>di sini berisi kode untuk main</p>
         <p>belajar dengan rajin</p>
         <p>tkj54</p>
+        <p>smkn54</p>
     </body>
 </html>
