sedikit mengubah teks

--- a/jatim.html
+++ b/jatim.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <p>Hello Semua, Saya sedang belajar Git</p>
+        <p>YAY! saya sudah sampai remote</p>
     </body>
 </html>
